--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,6 +1,7 @@
 .header {
   height: 60px;
   background-color: #eb3f43;
+  overflow: hidden;
 }
 header {
   display: flex;
@@ -47,4 +48,18 @@ h3 {
   margin-right: 20px;
   margin-left: 15px;
   cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .white h2 {
+    font-size: 14px;
+  }
+  h4 {
+    font-size: 10px !important;
+    margin: 0;
+  }
+  .right img {
+    width: 25px;
+    height: 25px;
+  }
 }
