--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
-body {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-}
-.test {
-  width: 30% !important;
 }
