--- a/src/Components/employees/NewEmployee/newEmployee.css
+++ b/src/Components/employees/NewEmployee/newEmployee.css
@@ -160,3 +160,10 @@ legend {
     font-size: 13px;
   }
 }
+
+@media (max-width: 500px) {
+  .fieldset__personal__info label {
+    display: flex;
+    flex-direction: column;
+  }
+}
